# polya

./: .gitignore  MODULE.bazel  README.md
core/: BUILD.bazel  main.cc
core/api/: BUILD.bazel  Polya.hh
core/polya-enumeration/group/: BUILD.bazel  PermutationGroup.cc  PermutationGroup.hh
core/polya-enumeration/group/test/: BUILD.bazel  PermutationGroupTest.cc
core/polya-enumeration/orbit-counting/: BUILD.bazel  OrbitCounting.cc  OrbitCounting.hh
core/polya-enumeration/orbit-counting/test/: BUILD.bazel  OrbitCountingTest.cc
core/polya-enumeration/permutation/: BUILD.bazel  Permutation.cc  Permutation.hh
core/polya-enumeration/permutation/test/: BUILD.bazel  PermutationTest.cc
core/polya-enumeration/polya/: BUILD.bazel  Polya.cc  Polya.hh
core/polya-enumeration/polya/test/: BUILD.bazel  PolyaTest.cc
core/polya-enumeration/polynomial/: BUILD.bazel  Polynomial.cc  Polynomial.hh
core/polya-enumeration/polynomial/test/: BUILD.bazel  PolynomialTest.cc
core/polya-enumeration/rational/: BUILD.bazel  Rational.cc  Rational.hh
core/polya-enumeration/rational/test/: BUILD.bazel  RationalTest.cc
core/util/: BUILD.bazel  Exception.hh  Power.hh  Type.hh
