load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "group",
    hdrs = [
        "PermutationGroup.hh",
    ],
    srcs = [
        "PermutationGroup.cc",
    ],
    deps = [
        "//core/polya-enumeration/permutation",
        "//core/util",
    ],
    implementation_deps = [
        "@range-v3//:range-v3",
    ],
    visibility = ["//visibility:public"],
)
