load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "orbit-counting",
    hdrs = [
        "OrbitCounting.hh",
    ],
    srcs = [
        "OrbitCounting.cc",
    ],
    deps = [
        "//core/polya-enumeration/group",
        "//core/util",
    ],
    implementation_deps = [
        "//core/polya-enumeration/rational",
        "//core/util:power",
        "@range-v3//:range-v3",
    ],
    visibility = ["//visibility:public"],
)
