load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "polynomial",
    hdrs = [
        "Polynomial.hh",
    ],
    srcs = [
        "Polynomial.cc",
    ],
    deps = [
        "//core/polya-enumeration/rational",
        "//core/util",
    ],
    implementation_deps = [
        "@range-v3//:range-v3",
    ],
    visibility = ["//visibility:public"],
)
