load("@rules_cc//cc:defs.bzl", "cc_test")

cc_test(
    name = "test",
    srcs = [
        "PolyaTest.cc",
    ],
    deps = [
        "//core/polya-enumeration/group",
        "//core/polya-enumeration/orbit-counting",
        "//core/polya-enumeration/polya",
        "//core/polya-enumeration/rational",
        "@googletest//:gtest_main",
    ],
)
